    errors.
    [David Christensen]

  - Teach bucardo about `show changed` to display any config settings different
    than the default.
    [David Christensen]

  - Add initial values for settings in bucardo_config.
    [David Christensen]

  - Fix bug in fork/cleanup code that may prevent a killed CTL from restarting.
    [Greg Sabino Mullane]

  - Fix bug in onetimecopy=2 mode
    [Greg Sabino Mullane]

  - Allow one-character schema names to work.
    [David Christensen]

  - Allow a direct DSN via the "dbdsn" attribute for the "add db" command.
    [Greg Sabino Mullane] ( https://github.com/bucardo/bucardo/issues/129 )

  - Rewrite code to support the new version of the Perl MongoDB driver.
    [Greg Sabino Mullane]

  - Improve the push_rows() function, and use ANY(?) whenever possible.
    [Greg Sabino Mullane]

  - Write things out more often, making 'bucardo status' more useful.
    [Greg Sabino Mullane]

  - Log the version of all loaded modules.
    [Greg Sabino Mullane]

  - Add basic support for Firebird as a target database type.
    [Greg Sabino Mullane]

  - Allow commas in the list for conflict_strategy.
    [Greg Sabino Mullane]

  - Remove 'boolean' as a global dependency, only require it for MongoDB use
    [Greg Sabino Mullane]


Bucardo version 5.4.1, released September 26, 2015

  - Ensure all sequences used in the bucardo database are in the bucardo schema.
    [Greg Sabino Mullane]


Bucardo version 5.4.0, released August 6, 2015 (git commit a0eff9f6558cc2c6b19e4e675604250ad00ce420)

  - Allow dashes in valid schema and table names
    [David Christensen]

  - New command "bucardo delta [syncname...]" to show number of pending 
    delta rows on source databases.
    [Greg Sabino Mullane]

  - Fix incorrect usage of the 'dbconn' parameter in the bucardo.db table
    [Greg Sabino Mullane, reported by Alexandre Busquets]

  - Fix case where VAC sometimes skipped databases used in multiple syncs.