@@ -99,6 +99,9 @@ Bucardo version 5.5.0, released November 5, 2018
   - Fix bug in fork/cleanup code that may prevent a killed CTL from restarting.
     [Greg Sabino Mullane]
 
+  - Add foreground flag
+    [Chris Barbour]
+
   - Fix bug in onetimecopy=2 mode
     [Greg Sabino Mullane]
 
